--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,14 +9,5 @@
         android:id="@+id/sneakerFragment"
         android:name="com.example.sneakership.SneakerFragment"
         android:label="fragment_sneaker"
-        tools:layout="@layout/fragment_sneaker" >
-        <action
-            android:id="@+id/action_sneakerFragment_to_sneakerDetailsFragment"
-            app:destination="@id/sneakerDetailsFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/sneakerDetailsFragment"
-        android:name="com.example.sneakership.SneakerDetailsFragment"
-        android:label="fragment_sneaker_details"
-        tools:layout="@layout/fragment_sneaker_details" />
+        tools:layout="@layout/fragment_sneaker" />
 </navigation>
